[tool.poetry]
name = "flask-docker"
version = "0.1.0"
description = ""
authors = ["tonykien2012 <tonykien2012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
